--- a/examples/spl-blink/platformio.ini
+++ b/examples/spl-blink/platformio.ini
@@ -1,7 +1,7 @@
-[env:stm8sdisco]
-platform = ststm8
-framework = spl
-board = stm8sdisco
+[env:STM8S105K6]
+platform = H2
+framework = SPL
+board = STM8S105K6
 
 ; [env:s8uno]
 ; platform = ststm8
