--- a/examples/spl-uart/platformio.ini
+++ b/examples/spl-uart/platformio.ini
@@ -1,4 +1,4 @@
-[env:mb208]
-platform = ststm8
-framework = spl
-board = mb208
+[env:STM8S208MB]
+platform = H2
+framework = SPL
+board = STM8S208MB
