--- a/examples/arduino-fade-all-pins/platformio.ini
+++ b/examples/arduino-fade-all-pins/platformio.ini
@@ -1,24 +1,4 @@
-; [env:stm8sdisco]
-; platform = ststm8
-; framework = arduino
-; board = stm8sdisco
-
-[env:stm8sblue]
-platform = ststm8
+[env:STM8S208MB]
+platform = H2
 framework = arduino
-board = stm8sblue
-
-; [env:s8uno]
-; platform = ststm8
-; framework = arduino
-; board = s8uno
-
-; [env:mb208]
-; platform = ststm8
-; framework = arduino
-; board = mb208
-
-; [env:stm8sblack]
-; platform = ststm8
-; framework = arduino
-; board = stm8sblack
+board = STM8S208MB
