--- a/examples/arduino-internal-lib/platformio.ini
+++ b/examples/arduino-internal-lib/platformio.ini
@@ -1,33 +1,4 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter, extra scripting
-;   Upload options: custom port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;
-; Please visit documentation for the other options and examples
-; http://docs.platformio.org/page/projectconf.html
-
-[env:stm8sdisco]
-platform = ststm8
+[env:STM8S105C6]
+platform = H2
 framework = arduino
-board = stm8sdisco
-
-[env:stm8sblue]
-platform = ststm8
-framework = arduino
-board = stm8sblue
-
-[env:s8uno]
-platform = ststm8
-framework = arduino
-board = s8uno
-
-[env:mb208]
-platform = ststm8
-framework = arduino
-board = mb208
-
-[env:stm8sblack]
-platform = ststm8
-framework = arduino
-board = stm8sblack
+board = STM8S105C6
