--- a/examples/spl-blink/platformio.ini
+++ b/examples/spl-blink/platformio.ini
@@ -1,14 +1,27 @@
+[platformio]
+default_envs = STM8S105K6
+
+[env:STM8S103F3]
+platform = H2
+framework = spl
+board = STM8S103F3
+
+[env:STM8S105K4]
+platform = H2
+framework = spl
+board = STM8S105K4
+
 [env:STM8S105K6]
 platform = H2
 framework = spl
 board = STM8S105K6
 
-; [env:s8uno]
-; platform = ststm8
-; framework = spl
-; board = s8uno
+[env:STM8S105C6]
+platform = H2
+framework = spl
+board = STM8S105C6
 
-; [env:mb208]
-; platform = ststm8
-; framework = spl
-; board = mb208
+[env:STM8S208MB]
+platform = H2
+framework = spl
+board = STM8S208MB
