--- a/examples/spl-flash/platformio.ini
+++ b/examples/spl-flash/platformio.ini
@@ -1,5 +1,17 @@
+[platformio]
+default_envs = STM8S105K6
+
+[env:STM8S105K6]
+platform = H2
+framework = spl
+board = STM8S105K6
+
 [env:STM8S105C6]
 platform = H2
 framework = spl
 board = STM8S105C6
 
+[env:STM8S208MB]
+platform = H2
+framework = spl
+board = STM8S208MB
