--- a/examples/arduino-internal-lib/platformio.ini
+++ b/examples/arduino-internal-lib/platformio.ini
@@ -2,3 +2,10 @@
 platform = H2
 framework = arduino
 board = STM8S105C6
+
+[env:STM8S103F3]
+platform = H2
+framework = arduino
+board = STM8S103F3
+debug_tool = stlinkv2
+upload_protocol = stlinkv2
