--- a/examples/arduino-ping-hc04/platformio.ini
+++ b/examples/arduino-ping-hc04/platformio.ini
@@ -1,27 +1,27 @@
-; [platformio]
-; default_envs = STM8S105K6
+[platformio]
+default_envs = STM8S103F3
 
 [env:STM8S103F3]
-platform = H2
+platform = H02
 framework = arduino
 board = STM8S103F3
 
 [env:STM8S105K4]
-platform = H2
+platform = H02
 framework = arduino
 board = STM8S105K4
 
 [env:STM8S105K6]
-platform = H2
+platform = H02
 framework = arduino
 board = STM8S105K6
 
 [env:STM8S105C6]
-platform = H2
+platform = H02
 framework = arduino
 board = STM8S105C6
 
 [env:STM8S208MB]
-platform = H2
+platform = H02
 framework = arduino
 board = STM8S208MB
