--- a/examples/arduino-fade-all-pins/platformio.ini
+++ b/examples/arduino-fade-all-pins/platformio.ini
@@ -1,7 +1,5 @@
-[env:STM8S208MB]
-platform = H02
-framework = arduino
-board = STM8S208MB
+; [platformio]
+; default_envs = STM8S103F3
 
 [env:STM8S103F3]
 platform = H02
@@ -9,3 +7,23 @@ framework = arduino
 board = STM8S103F3
 debug_tool = stlinkv2
 upload_protocol = stlinkv2
+
+[env:STM8S105K4]
+platform = H02
+framework = arduino
+board = STM8S105K4
+
+[env:STM8S105K6]
+platform = H02
+framework = arduino
+board = STM8S105K6
+
+[env:STM8S105C6]
+platform = H02
+framework = arduino
+board = STM8S105C6
+
+[env:STM8S208MB]
+platform = H02
+framework = arduino
+board = STM8S208MB
