--- a/examples/arduino-fade-all-pins/platformio.ini
+++ b/examples/arduino-fade-all-pins/platformio.ini
@@ -5,8 +5,8 @@
 platform = H02
 framework = arduino
 board = STM8S103F3
-debug_tool = stlinkv2
-upload_protocol = stlinkv2
+; debug_tool = stlinkv2
+; upload_protocol = stlinkv2
 
 [env:STM8S105K4]
 platform = H02
