--- a/examples/spl-blink/platformio.ini
+++ b/examples/spl-blink/platformio.ini
@@ -1,15 +1,15 @@
-[platformio]
-default_envs = STM8S208MB
+; [platformio]
+; default_envs = STM8S208MB
 
-[env:STM8S103F3]
-platform = H02
-framework = spl
-board = STM8S103F3
+; [env:STM8S103F3]
+; platform = H02
+; framework = spl
+; board = STM8S103F3
 
-[env:STM8S105K4]
-platform = H02
-framework = spl
-board = STM8S105K4
+; [env:STM8S105K4]
+; platform = H02
+; framework = spl
+; board = STM8S105K4
 
 [env:STM8S105K6]
 platform = H02
