--- a/examples/arduino-ping-hc04/platformio.ini
+++ b/examples/arduino-ping-hc04/platformio.ini
@@ -11,17 +11,17 @@ platform = H02
 framework = arduino
 board = STM8S105K4
 
-[env:STM8S105K6]
-platform = H02
-framework = arduino
-board = STM8S105K6
-
 [env:STM8S105C6]
 platform = H02
 framework = arduino
 board = STM8S105C6
 
-[env:STM8S208MB]
-platform = H02
-framework = arduino
-board = STM8S208MB
+; [env:STM8S105K6]
+; platform = H02
+; framework = arduino
+; board = STM8S105K6
+
+; [env:STM8S208MB]
+; platform = H02
+; framework = arduino
+; board = STM8S208MB
