--- a/examples/spl-uart/platformio.ini
+++ b/examples/spl-uart/platformio.ini
@@ -1,25 +1,25 @@
-[platformio]
-default_envs = STM8S208MB
+; [platformio]
+; default_envs = STM8S208MB
 
-[env:STM8S103F3]
-platform = H02
-framework = spl
-board = STM8S103F3
+; [env:STM8S103F3]
+; platform = H02
+; framework = spl
+; board = STM8S103F3
 
-[env:STM8S105K4]
-platform = H02
-framework = spl
-board = STM8S105K4
+; [env:STM8S105K4]
+; platform = H02
+; framework = spl
+; board = STM8S105K4
 
-[env:STM8S105K6]
-platform = H02
-framework = spl
-board = STM8S105K6
+; [env:STM8S105K6]
+; platform = H02
+; framework = spl
+; board = STM8S105K6
 
-[env:STM8S105C6]
-platform = H02
-framework = spl
-board = STM8S105C6
+; [env:STM8S105C6]
+; platform = H02
+; framework = spl
+; board = STM8S105C6
 
 [env:STM8S208MB]
 platform = H02
