同步官方示例

--- a/examples/arduino-fade-all-pins/platformio.ini
+++ b/examples/arduino-fade-all-pins/platformio.ini
@@ -1,29 +1,34 @@
-; [platformio]
-; default_envs = STM8S103F3
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter, extra scripting
+;   Upload options: custom port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;
+; Please visit documentation for the other options and examples
+; http://docs.platformio.org/page/projectconf.html
 
-[env:STM8S103F3]
-platform = H02
+[env:stm8sdisco]
+platform = ststm8
 framework = arduino
-board = STM8S103F3
-; debug_tool = stlinkv2
-; upload_protocol = stlinkv2
+board = stm8sdisco
 
-[env:STM8S105K4]
-platform = H02
-framework = arduino
-board = STM8S105K4
+; [env:stm8sblue]
+; platform = ststm8
+; framework = arduino
+; board = stm8sblue
+upload_protocol = stlinkv2
 
-[env:STM8S105K6]
-platform = H02
-framework = arduino
-board = STM8S105K6
+; [env:s8uno]
+; platform = ststm8
+; framework = arduino
+; board = s8uno
 
-[env:STM8S105C6]
-platform = H02
-framework = arduino
-board = STM8S105C6
+; [env:mb208]
+; platform = ststm8
+; framework = arduino
+; board = mb208
 
-[env:STM8S208MB]
-platform = H02
-framework = arduino
-board = STM8S208MB
+; [env:stm8sblack]
+; platform = ststm8
+; framework = arduino
+; board = stm8sblack
