--- a/examples/arduino-ping-hc04/platformio.ini
+++ b/examples/arduino-ping-hc04/platformio.ini
@@ -1,27 +1,24 @@
-; [platformio]
-; default_envs = STM8S103F3
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter, extra scripting
+;   Upload options: custom port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;
+; Please visit documentation for the other options and examples
+; http://docs.platformio.org/page/projectconf.html
 
-[env:STM8S103F3]
-platform = H02
+[env:stm8sdisco]
+platform = ststm8
 framework = arduino
-board = STM8S103F3
+board = stm8sdisco
 
-[env:STM8S105K4]
-platform = H02
+[env:stm8sblue]
+platform = ststm8
 framework = arduino
-board = STM8S105K4
+board = stm8sblue
 
-[env:STM8S105C6]
-platform = H02
+[env:stm8sblack]
+platform = ststm8
 framework = arduino
-board = STM8S105C6
-
-; [env:STM8S105K6]
-; platform = H02
-; framework = arduino
-; board = STM8S105K6
-
-; [env:STM8S208MB]
-; platform = H02
-; framework = arduino
-; board = STM8S208MB
+board = stm8sblack
+upload_protocol = stlinkv2
