--- a/examples/spl-flash/platformio.ini
+++ b/examples/spl-flash/platformio.ini
@@ -1,17 +1,24 @@
-[platformio]
-default_envs = STM8S105K6
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter, extra scripting
+;   Upload options: custom port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;
+; Please visit documentation for the other options and examples
+; http://docs.platformio.org/page/projectconf.html
 
-[env:STM8S105K6]
-platform = H02
+[env:stm8sdisco]
+platform = ststm8
 framework = spl
-board = STM8S105K6
+board = stm8sdisco
 
-[env:STM8S105C6]
-platform = H02
+[env:s8uno]
+platform = ststm8
 framework = spl
-board = STM8S105C6
+board = s8uno
 
-[env:STM8S208MB]
-platform = H02
+[env:mb208]
+platform = ststm8
 framework = spl
-board = STM8S208MB
+board = mb208
+
