--- a/examples/spl-uart/platformio.ini
+++ b/examples/spl-uart/platformio.ini
@@ -1,27 +1,13 @@
-; [platformio]
-; default_envs = STM8S208MB
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter, extra scripting
+;   Upload options: custom port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;
+; Please visit documentation for the other options and examples
+; http://docs.platformio.org/page/projectconf.html
 
-; [env:STM8S103F3]
-; platform = H02
-; framework = spl
-; board = STM8S103F3
-
-; [env:STM8S105K4]
-; platform = H02
-; framework = spl
-; board = STM8S105K4
-
-; [env:STM8S105K6]
-; platform = H02
-; framework = spl
-; board = STM8S105K6
-
-; [env:STM8S105C6]
-; platform = H02
-; framework = spl
-; board = STM8S105C6
-
-[env:STM8S208MB]
-platform = H02
+[env:mb208]
+platform = ststm8
 framework = spl
-board = STM8S208MB
+board = mb208
