--- a/examples/arduino-ping-hc04/platformio.ini
+++ b/examples/arduino-ping-hc04/platformio.ini
@@ -8,17 +8,17 @@
 ; http://docs.platformio.org/page/projectconf.html
 
 [env:stm8sdisco]
-platform = ststm8
+platform = P02
 framework = arduino
 board = stm8sdisco
 
 [env:stm8sblue]
-platform = ststm8
+platform = P02
 framework = arduino
 board = stm8sblue
 
 [env:stm8sblack]
-platform = ststm8
+platform = P02
 framework = arduino
 board = stm8sblack
 upload_protocol = stlinkv2
