--- a/examples/arduino-fade-all-pins/platformio.ini
+++ b/examples/arduino-fade-all-pins/platformio.ini
@@ -8,27 +8,27 @@
 ; http://docs.platformio.org/page/projectconf.html
 
 [env:stm8sdisco]
-platform = ststm8
+platform = P02
 framework = arduino
 board = stm8sdisco
 
 ; [env:stm8sblue]
-; platform = ststm8
+; platform = P02
 ; framework = arduino
 ; board = stm8sblue
 upload_protocol = stlinkv2
 
 ; [env:s8uno]
-; platform = ststm8
+; platform = P02
 ; framework = arduino
 ; board = s8uno
 
 ; [env:mb208]
-; platform = ststm8
+; platform = P02
 ; framework = arduino
 ; board = mb208
 
 ; [env:stm8sblack]
-; platform = ststm8
+; platform = P02
 ; framework = arduino
 ; board = stm8sblack
