--- a/examples/spl-blink/platformio.ini
+++ b/examples/spl-blink/platformio.ini
@@ -1,23 +1,6 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter, extra scripting
-;   Upload options: custom port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;
-; Please visit documentation for the other options and examples
-; http://docs.platformio.org/page/projectconf.html
 
-; [env:stm8sdisco]
-; platform = ststm8
-; framework = spl
-; board = stm8sdisco
-
-[env:s8uno]
-platform = ststm8
+[env:test]
+platform = P02
 framework = spl
-board = stm8sblue
+board = stm8sdisco
 upload_protocol = stlinkv2
-; [env:mb208]
-; platform = ststm8
-; framework = spl
-; board = mb208
