--- a/examples/spl-flash/platformio.ini
+++ b/examples/spl-flash/platformio.ini
@@ -8,17 +8,17 @@
 ; http://docs.platformio.org/page/projectconf.html
 
 [env:stm8sdisco]
-platform = ststm8
+platform = P02
 framework = spl
 board = stm8sdisco
 
 [env:s8uno]
-platform = ststm8
+platform = P02
 framework = spl
 board = s8uno
 
 [env:mb208]
-platform = ststm8
+platform = P02
 framework = spl
 board = mb208
 
