--- a/examples/spl-uart/platformio.ini
+++ b/examples/spl-uart/platformio.ini
@@ -8,6 +8,6 @@
 ; http://docs.platformio.org/page/projectconf.html
 
 [env:mb208]
-platform = ststm8
+platform = P02
 framework = spl
 board = mb208
