--- a/examples/arduino-internal-lib/platformio.ini
+++ b/examples/arduino-internal-lib/platformio.ini
@@ -1,24 +1,4 @@
-[env:stm8sdisco]
+[env:test]
 platform = P02
 framework = arduino
-board = stm8sdisco
-
-[env:stm8sblue]
-platform = P02
-framework = arduino
-board = stm8sblue
-
-[env:s8uno]
-platform = P02
-framework = arduino
-board = s8uno
-
-[env:mb208]
-platform = P02
-framework = arduino
-board = mb208
-
-[env:stm8sblack]
-platform = P02
-framework = arduino
-board = stm8sblack
+board = STM8S105K6
