--- a/examples/arduino-fade-all-pins/platformio.ini
+++ b/examples/arduino-fade-all-pins/platformio.ini
@@ -1,34 +1,4 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter, extra scripting
-;   Upload options: custom port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;
-; Please visit documentation for the other options and examples
-; http://docs.platformio.org/page/projectconf.html
-
-[env:stm8sdisco]
+[env:test]
 platform = P02
 framework = arduino
-board = stm8sdisco
-
-; [env:stm8sblue]
-; platform = P02
-; framework = arduino
-; board = stm8sblue
-upload_protocol = stlinkv2
-
-; [env:s8uno]
-; platform = P02
-; framework = arduino
-; board = s8uno
-
-; [env:mb208]
-; platform = P02
-; framework = arduino
-; board = mb208
-
-; [env:stm8sblack]
-; platform = P02
-; framework = arduino
-; board = stm8sblack
+board = STM8S105K6
