--- a/examples/arduino-ping-hc04/platformio.ini
+++ b/examples/arduino-ping-hc04/platformio.ini
@@ -1,24 +1,4 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter, extra scripting
-;   Upload options: custom port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;
-; Please visit documentation for the other options and examples
-; http://docs.platformio.org/page/projectconf.html
-
-[env:stm8sdisco]
+[env:test]
 platform = P02
 framework = arduino
-board = stm8sdisco
-
-[env:stm8sblue]
-platform = P02
-framework = arduino
-board = stm8sblue
-
-[env:stm8sblack]
-platform = P02
-framework = arduino
-board = stm8sblack
-upload_protocol = stlinkv2
+board = STM8S105K6
