--- a/examples/spl-flash/platformio.ini
+++ b/examples/spl-flash/platformio.ini
@@ -1,24 +1,6 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter, extra scripting
-;   Upload options: custom port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;
-; Please visit documentation for the other options and examples
-; http://docs.platformio.org/page/projectconf.html
-
-[env:stm8sdisco]
+[env:test]
 platform = P02
 framework = spl
-board = stm8sdisco
+board = STM8S105K6
 
-[env:s8uno]
-platform = P02
-framework = spl
-board = s8uno
-
-[env:mb208]
-platform = P02
-framework = spl
-board = mb208
 
