--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -13,6 +13,9 @@ jobs:
           - "examples/arduino-fade-all-pins"
           - "examples/arduino-internal-lib"
           - "examples/arduino-ping-hc04"
+          - "examples/reg-blinker"
+          - "examples/reg-timer"
+          - "examples/reg-uart"
           - "examples/spl-blink"
           - "examples/spl-flash"
           - "examples/spl-uart"
