--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -19,6 +19,7 @@ jobs:
           - "examples/spl-blink"
           - "examples/spl-flash"
           - "examples/spl-uart"
+
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
@@ -33,6 +34,6 @@ jobs:
           python -m pip install --upgrade pip
           pip install -U https://github.com/OS-Q/S03/archive/master.zip
           platformio platform install file://.
-      - name: Build examples
+      - name: Build P02
         run: |
           platformio run -d ${{ matrix.example }}
