--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ env:
   - PLATFORMIO_PROJECT_DIR=examples/spl-blink
   - PLATFORMIO_PROJECT_DIR=examples/spl-flash
   - PLATFORMIO_PROJECT_DIR=examples/spl-uart
+  - PLATFORMIO_PROJECT_DIR=examples/reg-blinker
+  - PLATFORMIO_PROJECT_DIR=examples/reg-timer
+  - PLATFORMIO_PROJECT_DIR=examples/reg-uart
 
 install:
   - pip install -U https://github.com/OS-Q/S03/archive/master.zip
