--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,7 +8,9 @@ environment:
     - PLATFORMIO_PROJECT_DIR: "examples/spl-blink"
     - PLATFORMIO_PROJECT_DIR: "examples/spl-flash"
     - PLATFORMIO_PROJECT_DIR: "examples/spl-uart"
-
+    - PLATFORMIO_PROJECT_DIR: "examples/reg-blinker"
+    - PLATFORMIO_PROJECT_DIR: "examples/reg-timer"
+    - PLATFORMIO_PROJECT_DIR: "examples/reg-uart"
 install:
   - cmd: git submodule update --init --recursive
   - cmd: SET PATH=C:\Python36\Scripts;%PATH%
@@ -17,3 +19,4 @@ install:
 
 test_script:
   - cmd: platformio run -d %PLATFORMIO_PROJECT_DIR%
+
