--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -16,6 +16,7 @@ jobs:
           - "examples/reg-blinker"
           - "examples/reg-timer"
           - "examples/reg-uart"
+          - "examples/ASM"
           - "examples/spl-blink"
           - "examples/spl-flash"
           - "examples/spl-uart"
