--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -22,6 +22,9 @@ jobs:
           - "examples/HSE"
           - "examples/OPT"
           - "examples/IWDG"
+          - "examples/ISR_Timer"
+          - "examples/Flash"
+          - "examples/ADC"
 
     runs-on: ${{ matrix.os }}
     steps:
