--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -25,6 +25,7 @@ jobs:
           - "examples/ISR_Timer"
           - "examples/Flash"
           - "examples/ADC"
+          - "examples/app"
 
     runs-on: ${{ matrix.os }}
     steps:
