--- a/examples/spl-uart/platformio.ini
+++ b/examples/spl-uart/platformio.ini
@@ -1,4 +1,14 @@
-[env:test]
+
+[env]
 platform = P02
 framework = native
+
+[env:STM8S105K6]
+board = STM8S105K6
+build_flags =
+    -DSTM8S105
+
+[env:STM8S208MB]
 board = STM8S208MB
+build_flags =
+    -DSTM8S208
