--- a/examples/spl-blink/platformio.ini
+++ b/examples/spl-blink/platformio.ini
@@ -1,5 +1,13 @@
-
-[env:test]
+[env]
 platform = P02
 framework = native
+
+[env:STM8S103F3]
+board = STM8S103F3
+build_flags =
+    -DSTM8S103
+
+[env:STM8S105K6]
 board = STM8S105K6
+build_flags =
+    -DSTM8S105
