--- a/examples/spl-uart/platformio.ini
+++ b/examples/spl-uart/platformio.ini
@@ -2,15 +2,15 @@
 platform = P02
 framework = native
 
-[env:STM8S103F3]
-board = STM8S103F3
-build_flags =
-    -D STM8S103
+; [env:STM8S103F3]
+; board = STM8S103F3
+; build_flags =
+;     -D STM8S103
 
-[env:STM8S105K6]
-board = STM8S105K6
-build_flags =
-    -D STM8S105
+; [env:STM8S105K6]
+; board = STM8S105K6
+; build_flags =
+;     -D STM8S105
 
 [env:STM8S208MB]
 board = STM8S208MB
