--- a/.github/workflows/platformio.yml
+++ b/.github/workflows/platformio.yml
@@ -13,12 +13,12 @@ jobs:
           - "examples/arduino-fade-all-pins"
           - "examples/arduino-internal-lib"
           - "examples/arduino-ping-hc04"
-          - "examples/reg-blinker"
+          - "examples/native-blink"
+          - "examples/native-flash"
+          - "examples/native-uart"
+          - "examples/reg-blink"
           - "examples/reg-timer"
           - "examples/reg-uart"
-          - "examples/spl-blink"
-          - "examples/spl-flash"
-          - "examples/spl-uart"
           - "examples/HSE"
           - "examples/OPT"
           - "examples/IWDG"
