--- a/examples/native-blink/platformio.ini
+++ b/examples/native-blink/platformio.ini
@@ -2,9 +2,9 @@
 platform = P02
 framework = native
 
-[env:STM8S103F3]
-board = STM8S103F3
-build_flags = -DSTM8S103
+; [env:STM8S103F3]
+; board = STM8S103F3
+; build_flags = -DSTM8S103
 
 [env:STM8S105K6]
 board = STM8S105K6
