--- a/examples/native-uart/platformio.ini
+++ b/examples/native-uart/platformio.ini
@@ -12,7 +12,7 @@ framework = native
 ; build_flags =
 ;     -D STM8S105
 
-[env:STM8S208MB]
-board = STM8S208MB
-build_flags =
-    -D STM8S208
+; [env:STM8S208MB]
+; board = STM8S208MB
+; build_flags =
+;     -D STM8S208
