--- a/examples/UART/platformio.ini
+++ b/examples/UART/platformio.ini
@@ -1,6 +1,7 @@
-[env:test]
+[env]
 platform = P02
-board = STM8S103F3
-build_flags =
-    -L ./lib
-    -I ./lib
+framework = native
+
+[env:STM8S003F3]
+board = STM8S003F3
+
