--- a/.github/workflows/platformio.yml
+++ b/.github/workflows/platformio.yml
@@ -8,7 +8,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: [3.8]
+        python-version: [3.7]
         example:
           - "examples/arduino-fade-all-pins"
           - "examples/arduino-internal-lib"
@@ -16,12 +16,12 @@ jobs:
           - "examples/blink"
           - "examples/reg-timer"
           - "examples/reg-uart"
-          - "examples/HSE"
-          - "examples/OPT"
-          - "examples/IWDG"
-          - "examples/ISR_Timer"
-          - "examples/Flash"
-          - "examples/ADC"
+          # - "examples/HSE"
+          # - "examples/OPT"
+          # - "examples/IWDG"
+          # - "examples/ISR_Timer"
+          # - "examples/Flash"
+          # - "examples/ADC"
 
     runs-on: ${{ matrix.os }}
     steps:
