--- a/.github/workflows/OSQ.yml
+++ b/.github/workflows/OSQ.yml
@@ -14,7 +14,7 @@ jobs:
           # - "examples/arduino-internal-lib"
           # - "examples/arduino-ping-hc04"
           - "examples/blink"
-          # - "examples/reg-timer"
+          - "examples/timer"
           # - "examples/reg-uart"
           # - "examples/HSE"
           # - "examples/OPT"
