--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,6 +5,9 @@ environment:
     - PLATFORMIO_PROJECT_DIR: "examples/native-blink"
     - PLATFORMIO_PROJECT_DIR: "examples/native-timer"
     - PLATFORMIO_PROJECT_DIR: "examples/native-uart1"
+    - PLATFORMIO_PROJECT_DIR: "examples/native-flash"
+    - PLATFORMIO_PROJECT_DIR: "examples/native-eeprom"
+    - PLATFORMIO_PROJECT_DIR: "examples/blink"
 
 install:
   - cmd: git submodule update --init --recursive
