--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ python:
   - "3.7"
 
 env:
+  - PLATFORMIO_PROJECT_DIR=examples/native-adc
   - PLATFORMIO_PROJECT_DIR=examples/native-blink
   - PLATFORMIO_PROJECT_DIR=examples/native-timer
   - PLATFORMIO_PROJECT_DIR=examples/native-uart1
