--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,6 +2,7 @@ build: off
 environment:
 
   matrix:
+    - PLATFORMIO_PROJECT_DIR: "examples/native-adc"
     - PLATFORMIO_PROJECT_DIR: "examples/native-blink"
     - PLATFORMIO_PROJECT_DIR: "examples/native-timer"
     - PLATFORMIO_PROJECT_DIR: "examples/native-uart1"
