--- a/examples/arduino-fade-all-pins/platformio.ini
+++ b/examples/arduino-fade-all-pins/platformio.ini
@@ -1,4 +1,9 @@
-[env:test]
+[env]
 platform = P02
 framework = arduino
+
+; [env:STM8S003F3]
+; board = STM8S003F3
+
+[env:STM8S105C6]
 board = STM8S105C6
