--- a/.github/workflows/OSQ.yml
+++ b/.github/workflows/OSQ.yml
@@ -10,6 +10,7 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
         python-version: [3.7]
         examples:
+          - "examples/native-adc"
           - "examples/native-blink"
           - "examples/native-timer"
           - "examples/native-uart1"
