--- a/.github/workflows/OSQ.yml
+++ b/.github/workflows/OSQ.yml
@@ -19,6 +19,7 @@ jobs:
           - "examples/native-eeprom"
           - "examples/arduino-fade-pins"
           - "examples/arduino-hc04"
+          - "examples/arduino-internal-libs"
           - "examples/blink"
           - "examples/timer"
           - "examples/uart"
