--- a/examples/arduino-hc04/platformio.ini
+++ b/examples/arduino-hc04/platformio.ini
@@ -1,4 +1,15 @@
-[env:test]
+[env]
 platform = P02
 framework = arduino
+
+[env:STM8S103F3]
+board = STM8S103F3
+
+[env:STM8S105K4]
+board = STM8S105K4
+
+[env:STM8S105K6]
+board = STM8S105K6
+
+[env:STM8S105C6]
 board = STM8S105C6
