--- a/examples/arduino-internal-libs/platformio.ini
+++ b/examples/arduino-internal-libs/platformio.ini
@@ -5,11 +5,11 @@ framework = arduino
 [env:STM8S103F3]
 board = STM8S103F3
 
+[env:STM8S003F3]
+board = STM8S003F3
+
 [env:STM8S105K4]
 board = STM8S105K4
-
-[env:STM8S105K6]
-board = STM8S105K6
 
 [env:STM8S105C6]
 board = STM8S105C6
