--- a/examples/arduino-hc04/platformio.ini
+++ b/examples/arduino-hc04/platformio.ini
@@ -2,14 +2,14 @@
 platform = P02
 framework = arduino
 
+[env:STM8S003F3]
+board = STM8S003F3
+
 [env:STM8S103F3]
 board = STM8S103F3
 
 [env:STM8S105K4]
 board = STM8S105K4
-
-[env:STM8S105K6]
-board = STM8S105K6
 
 [env:STM8S105C6]
 board = STM8S105C6
