--- a/examples/native-adc/platformio.ini
+++ b/examples/native-adc/platformio.ini
@@ -2,8 +2,8 @@
 platform = P02
 framework = native
 
+[env:STM8S003F3]
+board = STM8S003F3
+
 [env:STM8S103F3]
 board = STM8S103F3
-
-[env:STM8S105K4]
-board = STM8S105K4
