--- a/examples/blink/platformio.ini
+++ b/examples/blink/platformio.ini
@@ -8,6 +8,6 @@ extra_scripts =
 board = STM8S003F3
 extra_scripts =
     scripts/STM8S003.py
-platform_packages =
-    ; toolchain-sdcc @ http://182.61.61.133/dl/sdcc/toolchain-sdcc-windows_amd64-20200417-11574.zip
-    tool-stm8binutils @ http://182.61.61.133/dl/stm/tool-stm8binutils-windows_amd64-0.230.0.tar.gz
+; platform_packages =
+;     toolchain-sdcc @ http://182.61.61.133/dl/sdcc/toolchain-sdcc-windows_amd64-20200417-11574.zip
+;     tool-stm8binutils @ http://182.61.61.133/dl/stm/tool-stm8binutils-windows_amd64-0.230.0.tar.gz
