--- a/examples/arduino-blink/platformio.ini
+++ b/examples/arduino-blink/platformio.ini
@@ -4,6 +4,8 @@ framework = arduino
 
 [env:STM8S003F3]
 board = STM8S003F3
+extra_scripts =
+    scripts/STM8S003.py
 
 [env:STM8S103F3]
 board = STM8S103F3
