--- a/examples/native-blink/platformio.ini
+++ b/examples/native-blink/platformio.ini
@@ -4,6 +4,5 @@ framework = native
 
 [env:STM8S003F3]
 board = STM8S003F3
-
-; [env:custom]
-; board = B021
+extra_scripts =
+    scripts/STM8S003.py
