--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -10,18 +10,8 @@ jobs:
       matrix:
         python-version: [3.7]
         examples:
-          - "examples/blink"
-          - "examples/timer"
-          - "examples/uart"
-          - "examples/native-adc"
-          - "examples/native-opt"
           - "examples/native-blink"
-          - "examples/native-timer"
-          - "examples/native-uart1"
-          - "examples/native-flash"
-          - "examples/native-eeprom"
-          - "examples/arduino-hc04"
-          - "examples/arduino-internal-libs"
+          - "examples/arduino-blink"
 
     steps:
       - uses: actions/checkout@v2
