--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,14 +2,8 @@ build: off
 environment:
 
   matrix:
-    - PLATFORMIO_PROJECT_DIR: "examples/native-adc"
-    - PLATFORMIO_PROJECT_DIR: "examples/native-opt"
     - PLATFORMIO_PROJECT_DIR: "examples/native-blink"
-    - PLATFORMIO_PROJECT_DIR: "examples/native-timer"
-    - PLATFORMIO_PROJECT_DIR: "examples/native-uart1"
-    - PLATFORMIO_PROJECT_DIR: "examples/native-flash"
-    - PLATFORMIO_PROJECT_DIR: "examples/native-eeprom"
-    - PLATFORMIO_PROJECT_DIR: "examples/blink"
+    - PLATFORMIO_PROJECT_DIR: "examples/arduino-blink"
 
 install:
   - cmd: git submodule update --init --recursive
