--- a/examples/arduino-blink/platformio.ini
+++ b/examples/arduino-blink/platformio.ini
@@ -7,6 +7,9 @@ board = STM8S003F3
 extra_scripts =
     scripts/STM8S003.py
 
+[env:STM8S001J3]
+board = STM8S001J3
+
 [env:STM8S103F3]
 board = STM8S103F3
 
