--- a/examples/arduino-blink/platformio.ini
+++ b/examples/arduino-blink/platformio.ini
@@ -2,13 +2,13 @@
 platform = P14
 framework = arduino
 
+[env:STM8S001J3]
+board = STM8S001J3
+
 [env:STM8S003F3]
 board = STM8S003F3
 extra_scripts =
     scripts/STM8S003.py
-
-[env:STM8S001J3]
-board = STM8S001J3
 
 [env:STM8S103F3]
 board = STM8S103F3
@@ -16,5 +16,11 @@ board = STM8S103F3
 [env:STM8S105K4]
 board = STM8S105K4
 
+[env:STM8S105K6]
+board = STM8S105K6
+
 [env:STM8S105C6]
 board = STM8S105C6
+
+[env:STM8S208MB]
+board = STM8S208MB
