--- a/examples/native-blink/platformio.ini
+++ b/examples/native-blink/platformio.ini
@@ -2,10 +2,25 @@
 platform = P14
 framework = native
 
-[env:STM8S003F3]
-board = STM8S003F3
-extra_scripts =
-    scripts/STM8S003.py
+[env:B14A]
+board = B14A
 
-[env:STM8S001J3]
-board = STM8S001J3
+[env:B14B]
+board = B14B
+extra_scripts =
+    scripts/B14B.py
+
+[env:B14C]
+board = B14C
+
+[env:B14D]
+board = B14D
+
+[env:B14E]
+board = B14E
+
+[env:B14F]
+board = B14F
+
+[env:B14H]
+board = B14H
