--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -28,6 +28,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: "recursive"
+          token: ${{ secrets.GITHUB_REPO_TOKEN }}
 
       - name: Python ${{ matrix.python-version }}
         uses: actions/setup-python@v1
