--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -26,11 +26,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-        env:
-        GITHUB_TOKEN: ${{ secrets.P_REPO_TOKEN }}
         with:
           submodules: "recursive"
-          token: ${{ secrets.OSQ_REPO_TOKEN }}
+          token: ${{ secrets.P_REPO_TOKEN }}
 
       - name: Python ${{ matrix.python-version }}
         uses: actions/setup-python@v1
