--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -20,8 +20,7 @@ jobs:
       matrix:
         python-version: [3.7]
         examples:
-          - "examples/native-blink"
-          - "examples/arduino-blink"
+          - "examples/B"
 
     steps:
       - uses: actions/checkout@v2
