--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -20,7 +20,7 @@ jobs:
       matrix:
         python-version: [3.7]
         examples:
-          - "examples/B"
+          - "examples/template-B"
 
 
     steps:
