--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,14 @@ python:
   - "3.7"
 
 env:
-  - PLATFORMIO_PROJECT_DIR=examples/B
+  - PLATFORMIO_PROJECT_DIR=examples/template-B
 
 install:
   - pip install -U https://github.com/OS-Q/S03/archive/master.zip
-  - platformio platform install file://.
+  - pio platform install file://.
 
 script:
-  - platformio run -d $PLATFORMIO_PROJECT_DIR
+  - pio run -d $PLATFORMIO_PROJECT_DIR
 
 notifications:
   email:
