--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,13 +2,13 @@ build: off
 environment:
 
   matrix:
-    - PLATFORMIO_PROJECT_DIR: "examples/B"
+    - PLATFORMIO_PROJECT_DIR: "examples/template-B"
 
 install:
   - cmd: git submodule update --init --recursive
-  - cmd: SET PATH=C:\Python36\Scripts;%PATH%
+  - cmd: SET PATH=C:\Python37\Scripts;%PATH%
   - cmd: pip3 install -U https://github.com/OS-Q/S03/archive/master.zip
-  - cmd: platformio platform install file://.
+  - cmd: pio platform install file://.
 
 test_script:
-  - cmd: platformio run -d %PLATFORMIO_PROJECT_DIR%
+  - cmd: pio run -d %PLATFORMIO_PROJECT_DIR%
