--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
+[submodule "boards"]
+	path = boards
+	url = https://github.com/OS-Q/B14.git
+
 [submodule "examples/template-B"]
 	path = examples/template-B
 	url = https://github.com/OS-Q/T14B.git
