--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,15 @@
+*.db
 *.pyc
-*__py*/
-*.pio/
+__pycache__/
 *.vscode/
+*.pio/
 *.rst
-*.rel
-*.sym
-*.lst
-*.asm
+# *.md
+**/*/README*
+LICENSE*
+*.png
+*.jpg
+examples/**/*.yml
+examples/**/*.md
+**/CONTR*
+**/CHANGE*
