--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,21 @@
 language: python
 python:
-  - "3.7"
+  - "3.9"
+os:
+  - linux
+
+git:
+  depth: 1
 
 env:
   - PLATFORMIO_PROJECT_DIR=examples/template-B
 
 install:
-  - pip install -U https://github.com/OS-Q/S03/archive/master.zip
-  - pio platform install file://.
+  - pip install -U https://github.com/OS-Q/M03/releases/latest/download/qio.zip
+  - qio platform install file://.
 
 script:
-  - pio run -d $PLATFORMIO_PROJECT_DIR
+  - qio run -d $PLATFORMIO_PROJECT_DIR
 
 notifications:
-  email:
-    recipients:
-      - tang@qitas.cn
-    on_success: never # default: change
-    on_failure: always # default: always
+  email: false
