--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,11 +4,13 @@ environment:
   matrix:
     - PLATFORMIO_PROJECT_DIR: "examples/template-B"
 
+platform:
+  - x64
 install:
   - cmd: git submodule update --init --recursive
   - cmd: SET PATH=C:\Python37\Scripts;%PATH%
-  - cmd: pip3 install -U https://github.com/OS-Q/S03/archive/master.zip
-  - cmd: pio platform install file://.
+  - cmd: pip3 install -U https://github.com/OS-Q/M03/releases/latest/download/qio.zip
+  - cmd: qio platform install file://.
 
 test_script:
-  - cmd: pio run -d %PLATFORMIO_PROJECT_DIR%
+  - cmd: qio run -d %PLATFORMIO_PROJECT_DIR%
