--- a/examples/arduino-internal-lib/platformio.ini
+++ b/examples/arduino-internal-lib/platformio.ini
@@ -8,26 +8,26 @@
 ; http://docs.platformio.org/page/projectconf.html
 
 [env:stm8sdisco]
-platform = ststm8
+platform = P14
 framework = arduino
 board = stm8sdisco
 
 [env:stm8sblue]
-platform = ststm8
+platform = P14
 framework = arduino
 board = stm8sblue
 
 [env:s8uno]
-platform = ststm8
+platform = P14
 framework = arduino
 board = s8uno
 
 [env:mb208]
-platform = ststm8
+platform = P14
 framework = arduino
 board = mb208
 
 [env:stm8sblack]
-platform = ststm8
+platform = P14
 framework = arduino
 board = stm8sblack
