--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,58 +1,34 @@
 version: 2
 jobs:
 
-  QIO:
-    docker:
-      - image: python:3
-    steps:
-      - checkout
-      - run:
-          name: "QIO"
-          command: |
-            apt update
-            apt install -y git
-            git submodule update --init --recursive
-      - run:
-          name: "Install"
-          command: |
-            python -m pip install --upgrade pip
-            pip install -U https://github.com/OS-Q/M03/releases/latest/download/qio.zip
-            qio platform install file://.
-      - run:
-          name: "Build"
-          command: |
-            qio run -d examples/spl-blink
-            qio run -d examples/native-blink
-            qio run -d examples/arduino-internal-lib
-
   PIO:
     docker:
       - image: python:3
     steps:
       - checkout
       - run:
-          name: "PIO"
+          name: "Install"
           command: |
             apt update
             apt install -y git
             git submodule update --init --recursive
-      - run:
-          name: "Install"
-          command: |
             python -m pip install --upgrade pip
             pip install -U https://github.com/platformio/platformio/archive/develop.zip
             pio platform install file://.
       - run:
           name: "Build"
           command: |
-            pio run -d examples/spl-blink
             pio run -d examples/native-blink
+            pio run -d examples/spl-blink
+            pio run -d examples/spl-flash
+            pio run -d examples/spl-uart-loopback
+            pio run -d examples/spl-uart-simple-printf
             pio run -d examples/arduino-internal-lib
+            pio run -d examples/arduino-ping-hc04
 
 workflows:
     version: 2
     run_ci:
         jobs:
-          - QIO
           - PIO
 
