--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,15 +2,18 @@ build: off
 environment:
 
   matrix:
+    - PLATFORMIO_PROJECT_DIR: "examples/native-blink"
     - PLATFORMIO_PROJECT_DIR: "examples/spl-blink"
+    - PLATFORMIO_PROJECT_DIR: "examples/arduino-fade-all-pins"
 
 platform:
   - x64
 install:
   - cmd: git submodule update --init --recursive
   - cmd: SET PATH=C:\Python37\Scripts;%PATH%
-  - cmd: pip3 install -U https://github.com/OS-Q/M03/releases/latest/download/qio.zip
-  - cmd: qio platform install file://.
+  - cmd: pip3 install platformio
+  - cmd: pio update
+  - cmd: pio platform install file://.
 
 test_script:
-  - cmd: qio run -d %PLATFORMIO_PROJECT_DIR%
+  - cmd: pio run -d %PLATFORMIO_PROJECT_DIR%
