--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,8 @@ env:
   - PLATFORMIO_PROJECT_DIR=examples/arduino-fade-all-pins
 
 install:
-  - pip install platformio
-    pio update
-  - pio platform install file://.
+  - pip install -U https://github.com/OS-Q/M03/releases/latest/download/qio.zip
+  - qio platform install file://.
 
 script:
   - qio run -d $PLATFORMIO_PROJECT_DIR
