--- a/.drone.yml
+++ b/.drone.yml
@@ -2,15 +2,17 @@ kind: pipeline
 name: OSQ
 
 steps:
-# - name: QIO
-#   image: python:3
-#   commands:
-#   - apt update
-#   - apt install -y git
-#   - git submodule update --init --recursive
-#   - pip install -U https://github.com/OS-Q/M03/releases/latest/download/qio.zip
-#   - qio platform install file://.
-#   - qio run -d examples/spl-blink
+- name: QIO
+  image: python:3
+  commands:
+  - apt update
+  - apt install -y git
+  - git submodule update --init --recursive
+  - pip install -U https://github.com/OS-Q/M03/releases/latest/download/qio.zip
+  - qio platform install file://.
+  - pio run -d examples/native-blink
+  - pio run -d examples/spl-blink
+  - pio run -d examples/arduino-fade-all-pins
 
 - name: PIO
   image: python:3
