--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -1,90 +1,65 @@
-name: CI
+name: nightly
 
 on:
-  push:
-    branches:
-      - master
-      - main
-    paths-ignore:
-      - '**.md'
-      - '**/CD.yml'
-      - '**/nightly.yml'
+  schedule:
+    - cron: "0 7 * * *"
+# on:
+#   push:
+#     branches:
+#       - master
+#       - main
 
 env:
-  UPLOAD_BUILD: true
+  UPLOAD_BUILD: false
 
 jobs:
-  CodeCheck:
-    name: CodeCheck
-    runs-on: ubuntu-latest
-    steps:
-    - name: Check out
-      uses: actions/checkout@v2
-      with:
-        submodules: "recursive"
-
-    - name: cppcheck
-      uses: Qful/check-action@master
-      with:
-        github_token: ${{ secrets.OSQ_REPO_TOKEN }}
-        enable: all #performance,portability,warning
-        inconclusive: disable
-        inline_suppression: disable
-        force_language: c
-        force: enable
-        max_ctu_depth: 2
-        # platform: disable
-        std: c11
-        output_file: ./codecheck.txt
-        other_options: --bug-hunting --verbose --std=c11
-
-    - name: report
-      uses: Qful/check-action@master
-      env:
-        GITHUB_TOKEN: ${{ secrets.OSQ_REPO_TOKEN }}
-        BRANCH_NAME: 'master'
-
-    - name: Upload
-      uses: actions/upload-artifact@v2
-      with:
-        name: code_check_report
-        path: codecheck.txt
-
   QIO:
     strategy:
       fail-fast: false
       matrix:
         example:
-          - "native-blink"
+          - "arduino-fade-all-pins"
+          - "arduino-internal-lib"
+          - "arduino-ping-hc04"
           - "spl-blink"
           - "spl-flash"
           - "spl-uart-loopback"
           - "spl-uart-simple-printf"
-          - "arduino-fade-all-pins"
-          - "arduino-internal-lib"
-          - "arduino-ping-hc04"
+          - "native-blink"
 
         os: [ubuntu-latest, windows-latest, macos-latest]
+        package:
+          - "release"
+          - "latest"
 
     runs-on: ${{ matrix.os }}
+
     steps:
       - uses: actions/checkout@v2
         with:
           submodules: "recursive"
           fetch-depth: 1
 
-      - name: Set up Python
+      - name: Python
         uses: actions/setup-python@v1
         with:
           python-version: 3.9
 
-      - name: Install QIO
+      - name: Install release
+        if: matrix.package == 'release'
         run: |
           python -m pip install --upgrade pip
           pip install -U https://github.com/OS-Q/M03/releases/latest/download/qio.zip
-          pio platform install file://.
+          pio platform install https://github.com/OS-Q/P14/releases/latest/download/package.zip
 
-      - name: Build examples
+      - name: Install latest
+        if: matrix.package == 'latest'
+        run: |
+          python -m pip install --upgrade pip
+          pip install -U https://github.com/OS-Q/M03/archive/master.zip
+          qio platform install file://.
+
+      - name: Build
         id: build
         if: success()
         working-directory: examples
@@ -99,29 +74,17 @@ jobs:
           name: qio_${{ matrix.example }}_${{ matrix.os }}
           path: examples/${{ matrix.example }}/.pio/build
 
-  qio_pass:
-    needs:
-      - QIO
-    if: success()
-    runs-on: ubuntu-latest
-    steps:
-      - name: notification
-        uses: Qful/mqtt-action@master
-        with:
-          protocol: mqtt
-          host: ${{secrets.MQTT_SERVER}}
-          port: 1883
-          username: ${{secrets.MQTT_USERNAME}}
-          password: ${{secrets.MQTT_PASSWORD}}
-          topic: ${{github.repository}}/${{github.workflow}}
-          message: "QIO success"
-
-  qio_fail:
+  QIO_fail:
     needs:
       - QIO
     if: failure()
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          submodules: "recursive"
+
       - name: notification
         uses: Qful/mqtt-action@master
         with:
@@ -131,24 +94,45 @@ jobs:
           username: ${{secrets.MQTT_USERNAME}}
           password: ${{secrets.MQTT_PASSWORD}}
           topic: ${{github.repository}}/${{github.workflow}}
-          message: "QIO failure"
+          message: "QIO build fail"
+
+  QIO_pass:
+    needs:
+      - QIO
+    if: success()
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          submodules: "recursive"
+
+      - name: notification
+        uses: Qful/mqtt-action@master
+        with:
+          protocol: mqtt
+          host: ${{secrets.MQTT_SERVER}}
+          port: 1883
+          username: ${{secrets.MQTT_USERNAME}}
+          password: ${{secrets.MQTT_PASSWORD}}
+          topic: ${{github.repository}}/${{github.workflow}}
+          message: "QIO build success"
 
   PIO:
     strategy:
       fail-fast: false
       matrix:
         example:
-          - "native-blink"
+          - "arduino-fade-all-pins"
+          - "arduino-internal-lib"
+          - "arduino-ping-hc04"
           - "spl-blink"
           - "spl-flash"
           - "spl-uart-loopback"
           - "spl-uart-simple-printf"
-          - "arduino-fade-all-pins"
-          - "arduino-internal-lib"
-          - "arduino-ping-hc04"
+          - "native-blink"
 
         os: [ubuntu-latest, windows-latest, macos-latest]
-
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
@@ -161,13 +145,13 @@ jobs:
         with:
           python-version: 3.9
 
-      - name: Install PIO
+      - name: Install package
         run: |
           python -m pip install --upgrade pip
           pip install -U https://github.com/platformio/platformio/archive/develop.zip
           pio platform install file://.
 
-      - name: Build examples
+      - name: Build
         id: build
         if: success()
         working-directory: examples
@@ -182,29 +166,17 @@ jobs:
           name: pio_${{ matrix.example }}_${{ matrix.os }}
           path: examples/${{ matrix.example }}/.pio/build
 
-  pio_pass:
-    needs:
-      - PIO
-    if: success()
-    runs-on: ubuntu-latest
-    steps:
-      - name: notification
-        uses: Qful/mqtt-action@master
-        with:
-          protocol: mqtt
-          host: ${{secrets.MQTT_SERVER}}
-          port: 1883
-          username: ${{secrets.MQTT_USERNAME}}
-          password: ${{secrets.MQTT_PASSWORD}}
-          topic: ${{github.repository}}/${{github.workflow}}
-          message: "PIO success"
-
-  pio_fail:
+  PIO_fail:
     needs:
       - PIO
     if: failure()
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          submodules: "recursive"
+
       - name: notification
         uses: Qful/mqtt-action@master
         with:
@@ -214,4 +186,27 @@ jobs:
           username: ${{secrets.MQTT_USERNAME}}
           password: ${{secrets.MQTT_PASSWORD}}
           topic: ${{github.repository}}/${{github.workflow}}
-          message: "PIO failure"
+          message: "PIO build fail"
+
+  PIO_pass:
+    needs:
+      - PIO
+    if: success()
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          submodules: "recursive"
+
+      - name: notification
+        uses: Qful/mqtt-action@master
+        with:
+          protocol: mqtt
+          host: ${{secrets.MQTT_SERVER}}
+          port: 1883
+          username: ${{secrets.MQTT_USERNAME}}
+          password: ${{secrets.MQTT_PASSWORD}}
+          topic: ${{github.repository}}/${{github.workflow}}
+          message: "PIO build success"
+
