--- a/.github/workflows/PIO.yml
+++ b/.github/workflows/PIO.yml
@@ -1,20 +1,20 @@
-name: CI
+name: PIO
 
 on:
   push:
     branches:
       - pio
-    paths-ignore:
-      - '**.md'
-      - '**/CD.yml'
-      - '**/nightly.yml'
-
-env:
-  UPLOAD_BUILD: true
+    paths:
+      - 'boards/**'
+      - 'builder/**'
+      - 'examples/**'
+      - 'misc/**'
+      - 'platform.json'
+      - 'platform.py'
 
 jobs:
   CodeCheck:
-    name: CodeCheck
+    name: Lint
     runs-on: ubuntu-latest
     steps:
     - name: Check out
@@ -26,13 +26,12 @@ jobs:
       uses: Qful/check-action@master
       with:
         github_token: ${{ secrets.OSQ_REPO_TOKEN }}
-        enable: all #performance,portability,warning
+        enable: all
         inconclusive: disable
         inline_suppression: disable
         force_language: c
         force: enable
         max_ctu_depth: 2
-        # platform: disable
         std: c11
         output_file: ./codecheck.txt
         other_options: --bug-hunting --verbose --std=c11
@@ -84,50 +83,7 @@ jobs:
           pio platform install file://.
 
       - name: Build examples
-        id: build
-        if: success()
         working-directory: examples
         run: |
           pio run -d ${{ matrix.example }}
-          echo "::set-output name=status::success"
 
-      - name: Upload
-        if: env.UPLOAD_BUILD
-        uses: actions/upload-artifact@v2
-        with:
-          name: pio_${{ matrix.example }}_${{ matrix.os }}
-          path: examples/${{ matrix.example }}/.pio/build
-
-  pio_pass:
-    needs:
-      - PIO
-    if: success()
-    runs-on: ubuntu-latest
-    steps:
-      - name: notification
-        uses: Qful/mqtt-action@master
-        with:
-          protocol: mqtt
-          host: ${{secrets.MQTT_SERVER}}
-          port: 1883
-          username: ${{secrets.MQTT_USERNAME}}
-          password: ${{secrets.MQTT_PASSWORD}}
-          topic: ${{github.repository}}/${{github.workflow}}
-          message: "PIO success"
-
-  pio_fail:
-    needs:
-      - PIO
-    if: failure()
-    runs-on: ubuntu-latest
-    steps:
-      - name: notification
-        uses: Qful/mqtt-action@master
-        with:
-          protocol: mqtt
-          host: ${{secrets.MQTT_SERVER}}
-          port: 1883
-          username: ${{secrets.MQTT_USERNAME}}
-          password: ${{secrets.MQTT_PASSWORD}}
-          topic: ${{github.repository}}/${{github.workflow}}
-          message: "PIO failure"
