--- a/.drone.yml
+++ b/.drone.yml
@@ -12,7 +12,12 @@ steps:
   - qio platform install file://.
   - pio run -d examples/native-blink
   - pio run -d examples/spl-blink
+  - pio run -d examples/spl-flash
+  - pio run -d examples/spl-uart-loopback
+  - pio run -d examples/spl-uart-simple-printf
   - pio run -d examples/arduino-fade-all-pins
+  - pio run -d examples/arduino-internal-lib
+  - pio run -d examples/arduino-ping-hc04
 
 - name: PIO
   image: python:3
@@ -24,5 +29,9 @@ steps:
   - pio platform install file://.
   - pio run -d examples/native-blink
   - pio run -d examples/spl-blink
+  - pio run -d examples/spl-flash
+  - pio run -d examples/spl-uart-loopback
+  - pio run -d examples/spl-uart-simple-printf
   - pio run -d examples/arduino-fade-all-pins
-
+  - pio run -d examples/arduino-internal-lib
+  - pio run -d examples/arduino-ping-hc04
