--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,4 +1,4 @@
-name: PIO
+name: CI
 
 on:
   push:
@@ -48,7 +48,7 @@ jobs:
         name: code_check_report
         path: codecheck.txt
 
-  PIO:
+  build:
     strategy:
       fail-fast: false
       matrix:
